# emotionclassifier

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
emotionclassifier/: __init__.py  classifier.py  cli.py  fine_tune.py  integration.py  logger.py  model_loader.py  preprocess.py  suppress_tqdm.py  trends.py  utils.py  visualization.py
examples/: example.py
tests/: test_classifier.py
